--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "mocha test/**/*-test.js"
+    "test": "mocha test/**/*-test.js",
+    "debug": "DEBUG=webmon* npm start"
   },
   "author": "Mark Frost",
   "license": "GPL-3.0",
