--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.14.0",
+    "forever": "^0.15.3",
     "socket.io": "^1.4.8"
   },
   "devDependencies": {
@@ -14,6 +15,8 @@
   },
   "scripts": {
     "start": "node index.js",
+    "daemon-start": "forever start index.js",
+    "daemon-stop": "forever stop index.js",
     "test": "mocha test/**/*-test.js",
     "debug": "DEBUG=webmon* npm start"
   },
