--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "forever": "^0.15.3",
+    "serialport": "^5.0.0",
     "socket.io": "^1.4.8"
   },
   "devDependencies": {
