--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,11 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+
+##############################
+# project-specific
+#
+
+# configuration secrets
+secret_config/
