--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "aws-sdk": "^2.402.0",
     "express": "^4.16.4",
     "forever": "^0.15.3",
+    "moment": "^2.24.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "serialport": "^7.1.4",
