--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
+# Editors
+.vscode/
 
 ##############################
 # project-specific
