--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "web front end for a software defined radio reading sensors",
   "main": "index.js",
   "dependencies": {
-    "aws-sdk": "^2.452.0",
-    "express": "^4.16.4",
+    "aws-sdk": "^2.493.0",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
     "forever": "^1.0.0",
     "moment": "^2.24.0",
     "request": "^2.88.0",
@@ -17,7 +18,7 @@
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
     "sinon": "^7.3.2",
-    "standard": "^12.0.1"
+    "standard": "^13.0.2"
   },
   "scripts": {
     "start": "node index.js",
